--- a/EasyBank2/EasyBank/EasyBank/EasyBank.csproj
+++ b/EasyBank2/EasyBank/EasyBank/EasyBank.csproj
@@ -45,6 +45,18 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="AddminForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="AddminForm.Designer.cs">
+      <DependentUpon>AddminForm.cs</DependentUpon>
+    </Compile>
+    <Compile Include="ChangingForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="ChangingForm.Designer.cs">
+      <DependentUpon>ChangingForm.cs</DependentUpon>
+    </Compile>
     <Compile Include="FormAdd.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -71,6 +83,24 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Spravka.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Spravka.Designer.cs">
+      <DependentUpon>Spravka.cs</DependentUpon>
+    </Compile>
+    <Compile Include="StartForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="StartForm.Designer.cs">
+      <DependentUpon>StartForm.cs</DependentUpon>
+    </Compile>
+    <EmbeddedResource Include="AddminForm.resx">
+      <DependentUpon>AddminForm.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="ChangingForm.resx">
+      <DependentUpon>ChangingForm.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="FormAdd.resx">
       <DependentUpon>FormAdd.cs</DependentUpon>
     </EmbeddedResource>
@@ -87,6 +117,12 @@
       <Generator>ResXFileCodeGenerator</Generator>
       <SubType>Designer</SubType>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Spravka.resx">
+      <DependentUpon>Spravka.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="StartForm.resx">
+      <DependentUpon>StartForm.cs</DependentUpon>
     </EmbeddedResource>
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
@@ -126,6 +162,15 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="Resources\help.jpg" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\back.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\back1.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\help.png" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
